HBASE-5653 [findbugs] Fix perf warnings (Uma Maheswara Rao G)
git-svn-id: https://svn.apache.org/repos/asf/hbase/trunk@1324547 13f79535-47bb-0310-9956-ffa450edef68